--- a/web-app/package.json
+++ b/web-app/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
     "@tanstack/react-table": "^8.21.3",
+    "framer-motion": "^12.23.12",
     "lucide-react": "^0.514.0",
     "next": "15.3.2",
     "react": "^18.2.0",
@@ -30,6 +31,6 @@
     "typescript": "^5.8.3"
   },
   "engines": {
-  "node": "22.x"
+    "node": "22.x"
   }
 }
