--- a/web-app/package.json
+++ b/web-app/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
+    "@supabase/supabase-js": "^2.56.0",
     "@tanstack/react-table": "^8.21.3",
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.514.0",
