--- a/web-app/package.json
+++ b/web-app/package.json
@@ -10,8 +10,11 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
+    "@radix-ui/react-primitive": "^2.1.3",
+    "@radix-ui/react-slot": "^1.2.3",
     "@supabase/supabase-js": "^2.56.0",
     "@tanstack/react-table": "^8.21.3",
+    "class-variance-authority": "^0.7.1",
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.514.0",
     "next": "15.3.2",
@@ -19,7 +22,8 @@
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.5.2",
     "react-paystack": "^6.0.0",
-    "react-toastify": "^11.0.5"
+    "react-toastify": "^11.0.5",
+    "tailwind-variants": "^3.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
