--- a/web-app/package.json
+++ b/web-app/package.json
@@ -16,9 +16,11 @@
     "@tanstack/react-table": "^8.21.3",
     "class-variance-authority": "^0.7.1",
     "framer-motion": "^12.23.12",
+    "fuse.js": "^7.1.0",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.514.0",
     "next": "15.3.2",
+    "openai": "^5.23.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.5.2",
