--- a/web-app/tsconfig.json
+++ b/web-app/tsconfig.json
@@ -33,7 +33,8 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    "src/app/@pages/profile"
+    "src/app/@pages/profile",
+    "src/types"
   ],
   "exclude": ["node_modules"]
 }
