--- a/web-app/tsconfig.json
+++ b/web-app/tsconfig.json
@@ -1,4 +1,5 @@
 {
+  // "$schema": "https://www.schemastore.org/tsconfig", // Keep this line commented out to avoid schema loading error
   "compilerOptions": {
     "target": "ES2017",
     "lib": ["dom", "dom.iterable", "esnext"],
@@ -18,7 +19,6 @@
     "paths": {
       "@/*": ["*"]
     },
-
     "ignoreDeprecations": "6.0",
     "incremental": true,
 
