--- a/web-app/package.json
+++ b/web-app/package.json
@@ -32,10 +32,13 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@netlify/plugin-nextjs": "^5.11.6",
+    "@types/geojson": "^7946.0.16",
+    "@types/json-schema": "^7.0.15",
     "@types/leaflet": "^1.9.20",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/ws": "^8.18.1",
     "eslint": "^9",
     "eslint-config-next": "15.3.2",
     "typescript": "^5.8.3"
